--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -1,3 +1,19 @@
-<div class="container">
-  <ul class="gallery"></ul>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Task 1</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body>
+    <p><a href="./index.html">Go back</a></p>
+    <section class="task-1">
+      <div class="container">
+        <ul class="gallery"></ul>
+      </div>
+    </section>
+
+    <script type="module" src="./js/1-gallery.js"></script>
+  </body>
+</html>
