--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,11 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="./1-gallery.html" />
-    <load ="./2-form.html" />
-    <script type="module" src="./js/1-gallery.js"></script>
-    <script type="module" src="./js/2-form.js"></script>
+    <ul>
+      <li><a href="./1-gallery.html">Task 1</a></li>
+      <li><a href="./2-form.html">Task 2</a></li>
+    </ul>
+    <!-- <load ="./1-gallery.html" />
+    <load ="./2-form.html" /> -->
   </body>
 </html>
