--- a/src/2-form.html
+++ b/src/2-form.html
@@ -12,11 +12,11 @@
       <form class="feedback-form" autocomplete="off">
         <label class="email-field">
           Email
-          <input type="email" name="email" autofocus />
+          <input type="email" name="email" autofocus required />
         </label>
         <label class="message-field">
           Message
-          <textarea name="message" rows="8"></textarea>
+          <textarea name="message" rows="8" required></textarea>
         </label>
         <button type="submit">Submit</button>
       </form>
